# desktop-native

./: .gitignore  CMakeLists.txt  README.md  index.d.ts  index.js  package-lock.json  package.json
src/: app_titles.scpt  common.h  desktop.c  desktop_apple.m  desktop_linux.c  desktop_linux.h
